[l10n] [SILENT_COMMIT] Synchronising with translation files from packages/po
r35607

--- a/debian/po/km.po
+++ b/debian/po/km.po
@@ -3,6 +3,7 @@
 #
 # DO NOT MODIFY IT DIRECTLY : SUCH CHANGES WILL BE LOST
 # 
+# translation of km.po to khmer
 #
 # Debian Installer master translation file template
 # Don't forget to properly fill-in the header of PO files#
@@ -10,74 +11,92 @@
 # in doc/i18n/i18n.txt#
 #
 # Hok Kakada <hokkakada@khmeros.info>, 2005, 2006.
+# hok kakada <hokkakada@khmeros.info>, 2006.
 msgid ""
 msgstr ""
 "Project-Id-Version: km\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-08-18 18:32-0600\n"
-"PO-Revision-Date: 2006-01-23 11:48+0700\n"
-"Last-Translator: Hok Kakada <hokkakada@khmeros.info>\n"
-"Language-Team: Khmer <support@khmeros.info>\n"
+"PO-Revision-Date: 2006-03-18 10:34+0700\n"
+"Last-Translator: hok kakada <hokkakada@khmeros.info>\n"
+"Language-Team: khmer <support@khmeros.info>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.11\n"
+"X-Generator: KBabel 1.11.2\n"
 
 #. Type: text
 #. Description
 #. Main menu item
 #: ../nobootloader.templates:4
+#, fuzzy
 msgid "Continue without boot loader"
-msgstr ""
+msgstr "បន្ត​ដោយ​គ្មាន​ boot loader"
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:8
+#, fuzzy
 msgid ""
 "Some variables need to be set in the Pegasos OpenFirmware in order for your "
 "system to boot linux automatically.  At the end of the installation, the "
 "system will reboot.  At the Pegasos OpenFirmware prompt, set the following "
 "OpenFirmware variables to enable auto-booting:"
 msgstr ""
+"អថេ​មួយ​ចំនួន​ត្រូវ​ការ​កំណត់​ក្នុង​ Pegasos OpenFirmware ដើម្បី​ឲ្យប្រព័ន្ធ​អ្នក​ចាប់​ផ្តើមចូល​ linux ដោយ​"
+"ស្វ័យ​ប្រវត្ត ។  នៅ​ចុង​បញ្ចប់​នៃ​ការ​ដំឡើង ប្រព័ន្ធ​និង​ ចាប់​ផ្តើម​ឡើង​វិញ​​ ។ ក្នុង​ប្រអប់​បញ្ចូល​ Pegasos "
+"OpenFirware  ចូរ​កំណត់​អថេ​ Pegasos OpenFirware ម្តង​ទៀតប្រព័ន្ធនិង ចាប់​ផ្តើម​ឡើង​វិញ​ ។ ក្នុង​"
+"ប្រអប់​បញ្ចូលកំណត់​​អថេរ​ Pegasos OpenFirmware ដែល​អនុញ្ញាត​ឲ្យ​ចាប់​ផ្តើមឡើង​វិញ​ដោ​ស្វ័យប្រវត្តិ​ដូច​ខាង​"
+"ក្រោម​ ៖"
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:8
+#, fuzzy
 msgid ""
 " setenv boot-device ${OF_BOOT_DEVICE}\n"
 " setenv boot-file ${OF_BOOT_FILE}\n"
 " setenv auto-boot-timeout 5000\n"
 " setenv auto-boot? true"
 msgstr ""
+" setenv ឧបករណ៍​ចាប់​ផ្តើម​ ${OF_BOOT_DEVICE}\n"
+" setenv ឯកសារ​ចាប់ផ្តើម ${OF_BOOT_FILE}\n"
+" setenv ដល់ពេល​ចាប់​ផ្តើម​ដោយ​ស្វ័យ​ប្រវត្តិ​ 5000\n"
+" setenv ចាប់​ផ្តើម​ដោយ​ស្វ័យ​ប្រវត្ត​ឬ ? ពិត"
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:8
+#, fuzzy
 msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering :"
-msgstr ""
+msgstr "ដែល​ជំនួស​  អ្នក​អាច​ចាប់​ផ្តើម​ខឺណែល​ដោយ​បញ្ចូល​ដោយ​ដែ ។"
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:8
+#, fuzzy
 msgid " ${KERNEL_BOOT}"
-msgstr ""
+msgstr " ${KERNEL_BOOT}"
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:8
+#, fuzzy
 msgid "at the OpenFirmware prompt."
-msgstr ""
+msgstr "នៅ​ឯ​ OpenFirmware ប្រអប់​បញ្ចូល ។"
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:30
+#, fuzzy
 msgid "Setting firmware variables for automatic boot"
-msgstr ""
+msgstr "កំណត់អថរ​ firmware ចាប់​ផ្តើម​ឡើង​វិញ​ដោយ​ស្វ័យ​ប្រវត្តិ​"
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:30
+#, fuzzy
 msgid ""
 "Some variables need to be set in the Netwinder NeTTrom firmware in order for "
 "your system to boot linux automatically.  At the end of this installation "
@@ -85,10 +104,15 @@ msgid ""
 "You can abort this by pressing any key. You will then be dropped into the "
 "NeTTrom command system where you have to execute the following commands:"
 msgstr ""
+"អថេរ​មួយ​ចំនួន​ត្រូវ​ការ​កំណត់​ក្នុង​ NeTTrom firmware សម្រាប់​ចាប់​ដំណើរការ​ប្រព័ន្ធលីនុច​​របស់​អ្នក​ដោយ​ស្វ័យ​"
+"ប្រវត្តិ​ ។ ក្នុង​ចុង​បញ្ចប់​នៃ​ស្ថានភាព​ការ​ដំឡើង​ ប្រព័ន្ធ​របស់​អ្នក​និង​ ចាប់​ផ្តើម​ឡើង​វិញ ហើយ firmware និង​"
+"ព្យាយាម​ចាប់​ផ្តើម​ឡើង​វិញ​ដោយ​ស្វ័យប្រវត្តិ​។​  អ្នក​អាច​បោះបង់​ចោល​ដោយ​សង្កត់​គន្លឺះ​ផ្សេង​ទៀត ។ បន្ទាប់​មក​ "
+"NeTTrom ត្រូវ​បាន​ចាប់​ទាញ​ចូលក្នុង​ប្រព័ន្ធ​  ​អ្នកង់ប្រត្តិបត្តិ​វា​នៅ​ទីតង​ខាង​ក្រោមn ៖s:"
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:30
+#, fuzzy
 msgid ""
 "   setenv kernconfig fs\n"
 "   setenv kerndev ${KERNDEV}\n"
@@ -97,33 +121,49 @@ msgid ""
 "   setenv cmdappend ${CMDAPPEND}\n"
 "   save-all"
 msgstr ""
+"   setenv kernconfig fs\n"
+"   setenv kerndev ${KERNDEV}\n"
+"   setenv kernfile ${KERNFILE}\n"
+"   setenv rootdev ${ROOTDEV}\n"
+"   setenv cmdappend ${CMDAPPEND}\n"
+"   save-all"
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:30
+#, fuzzy
 msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to the next installation stage."
 msgstr ""
+"You will only need to do this once.  Afterwards, enter the \"boot\" command "
+"or reboot the system to proceed to the next installation stage."
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:50
+#, fuzzy
 msgid "No boot loader installed"
-msgstr ""
+msgstr " boot loader មិន​ត្រូវ​បាន​ដំឡើង"
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:50
+#, fuzzy
 msgid ""
 "No boot loader has been installed, either because you chose not to or "
 "because your specific architecture doesn't support a boot loader yet."
 msgstr ""
+" boot loader មិន​ត្រូវ​បាន​ដំឡើង ព្រោះ​អ្នក​មិន​បាន​ជ្រើស​រើសឬ បញ្ជាក់​ស្ថាបត្យករ​​របស់​អ្នក​មិន​បាន​គាំ​ទ្រ​ "
+"boot loader នៅ​ឡើយ​ទេ ។"
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:50
+#, fuzzy
 msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as a kernel argument."
 msgstr ""
+"អ្នក​ត្រូវ​ការ​ចាប់​ផ្តើម​ឡើង​ដោយ​ដៃ​ជាមួយ​ ${KERNEL} ខឺណែលលើ​ភាគថាស${BOOT} and ${ROOT} ត្រូវ​បាន​"
+"ឆ្លង​កាត់​ខឺណែល ។​"
