[l10n] [SILENT_COMMIT] Synchronising with translation files from packages/po
r35849

--- a/debian/po/de.po
+++ b/debian/po/de.po
@@ -21,7 +21,7 @@ msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-08-18 18:32-0600\n"
-"PO-Revision-Date: 2005-10-08 23:00+0200\n"
+"PO-Revision-Date: 2006-03-24 21:29+0100\n"
 "Last-Translator: Jens Seidel <jensseidel@users.sf.net>\n"
 "Language-Team: Debian German <debian-l10n-german@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -48,7 +48,7 @@ msgid ""
 msgstr ""
 "Einige Variablen müssen in der Pegasos OpenFirmware eingestellt sein, damit "
 "Ihr System Linux automatisch startet. Am Ende der Installation wird das "
-"System neu starten. Stellen Sie die folgenden Pegasos OpenFirmware-Variablen "
+"System neu starten. Stellen Sie die folgenden Pegasos-OpenFirmware-Variablen "
 "am Boot-Prompt ein, damit der Computer automatisch startet:"
 
 #. Type: note
@@ -71,7 +71,7 @@ msgstr ""
 msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering :"
 msgstr ""
-"Alternativ können Sie den Kernel von Hand booten, indem Sie folgendes "
+"Alternativ können Sie den Kernel von Hand booten, indem Sie Folgendes "
 "eingeben:"
 
 #. Type: note
@@ -163,5 +163,5 @@ msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as a kernel argument."
 msgstr ""
-"Sie müssen manuell mit dem Kernel ${KERNEL} auf der Partition ${BOOT} "
-"starten und ${ROOT} dem Kernel als Parameter übergeben."
+"Sie müssen manuell starten, indem Sie den Kernel ${KERNEL} auf der Partition "
+"${BOOT} sowie ${ROOT} als Bootparameter übergeben."
