--- a/debian/po/ta.po
+++ b/debian/po/ta.po
@@ -52,8 +52,8 @@ msgstr ""
 "Project-Id-Version: ta\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-08-18 18:32-0600\n"
-"PO-Revision-Date: 2006-01-02 21:09+0530\n"
-"Last-Translator: Damodharan Rajalingam\n"
+"PO-Revision-Date: 2006-03-29 23:45+0530\n"
+"Last-Translator: Damodharan Rajalingam <r.damodharan@yahoo.co.in>\n"
 "Language-Team:  <tamil-DI@yahoogroups.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -98,7 +98,7 @@ msgstr ""
 #. Description
 #: ../nobootloader.templates:8
 msgid " ${KERNEL_BOOT}"
-msgstr ""
+msgstr " ${KERNEL_BOOT}"
 
 #. Type: note
 #. Description
