[l10n] [SILENT_COMMIT] Synchronising with translation files from packages/po
r36071

--- a/debian/po/ca.po
+++ b/debian/po/ca.po
@@ -14,7 +14,7 @@ msgstr ""
 "Project-Id-Version: debian-installer 1.1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-08-18 18:32-0600\n"
-"PO-Revision-Date: 2006-02-05 23:02+0100\n"
+"PO-Revision-Date: 2006-04-02 21:56+0200\n"
 "Last-Translator: Jordi Mallach <jordi@debian.org>\n"
 "Language-Team: Catalan <debian-l10n-catalan@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -38,7 +38,7 @@ msgid ""
 "OpenFirmware variables to enable auto-booting:"
 msgstr ""
 "Es necessita establir algunes variables al Pegasos OpenFirmware per a poder "
-"arrencar Linux automàticament. A final de la instal·lació, el sistema "
+"arrencar Linux automàticament. Al final de la instal·lació, el sistema "
 "tornarà a arrencar. A l'indicatiu del Pegasos OpenFirmware, establiu les "
 "següents variables d'OpenFirmware per a habilitar l'arrencada automàtica:"
 
@@ -94,7 +94,7 @@ msgid ""
 "NeTTrom command system where you have to execute the following commands:"
 msgstr ""
 "Es necessita establir algunes variables al microprogramari Netwinder NetTrom "
-"per a poder arrencar Linux automàticament. A final de la instal·lació, el "
+"per a poder arrencar Linux automàticament. Al final de la instal·lació, el "
 "sistema tornarà a arrencar, i el microprogramari tractarà d'arrencar "
 "automàticament. Podeu avortar això prement qualsevol tecla. Aleshores, "
 "entrareu al sistema d'ordres de NeTTrom on heu d'executar les següents "
