--- a/debian/po/km.po
+++ b/debian/po/km.po
@@ -3,33 +3,33 @@
 #
 # DO NOT MODIFY IT DIRECTLY : SUCH CHANGES WILL BE LOST
 # 
-# translation of template.po to khmer
+# translation of template.po to Khmer
 #
 # Debian Installer master translation file template
 # Don't forget to properly fill-in the header of PO files#
 # Debian Installer translators, please read the D-I i18n documentation
 # in doc/i18n/i18n.txt#
 #
-# hok kakada <hokkakada@khmeros.info>, 2006.
+# Leang Chumsoben <soben@khmeros.info>, 2006.
 msgid ""
 msgstr ""
 "Project-Id-Version: template\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-08-18 18:32-0600\n"
-"PO-Revision-Date: 2006-03-23 17:50+0700\n"
-"Last-Translator: hok kakada <hokkakada@khmeros.info>\n"
-"Language-Team: khmer <support@khmeros.info>\n"
+"PO-Revision-Date: 2006-04-11 09:22+0700\n"
+"Last-Translator: Leang Chumsoben <soben@khmeros.info>\n"
+"Language-Team: Khmer <support@khmeros.info>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.11.2\n"
+"X-Generator: KBabel 1.11\n"
 
 #. Type: text
 #. Description
 #. Main menu item
 #: ../nobootloader.templates:4
 msgid "Continue without boot loader"
-msgstr "បន្ត​ដោយ​គ្មាន​ boot loader"
+msgstr "បន្ត​ដោយ​គ្មាន​កម្មវិធី​ចាប់ផ្ដើម​ប្រព័ន្ធ"
 
 #. Type: note
 #. Description
@@ -40,11 +40,9 @@ msgid ""
 "system will reboot.  At the Pegasos OpenFirmware prompt, set the following "
 "OpenFirmware variables to enable auto-booting:"
 msgstr ""
-"អថេ​មួយ​ចំនួន​ត្រូវ​ការ​កំណត់​ក្នុង​ Pegasos OpenFirmware ដើម្បី​ឲ្យប្រព័ន្ធ​អ្នក​ចាប់​ផ្តើមចូល​ linux ដោយ​"
-"ស្វ័យ​ប្រវត្ត ។  នៅ​ចុង​បញ្ចប់​នៃ​ការ​ដំឡើង ប្រព័ន្ធ​និង​ ចាប់​ផ្តើម​ឡើង​វិញ​​ ។ ក្នុង​ប្រអប់​បញ្ចូល​ Pegasos "
-"OpenFirware  ចូរ​កំណត់​អថេ​ Pegasos OpenFirware ម្តងទៀតប្រព័ន្ធនិង ចាប់​ផ្តើម​ឡើង​វិញ​ ។ ក្នុង​"
-"ប្រអប់​បញ្ចូលកំណត់​​អថេរ​ Pegasos OpenFirmware ដែល​អនុញ្ញាត​ឲ្យ​ចាប់​ផ្តើមឡើង​វិញ​ដោ​ស្វ័យប្រវត្តិ​ដូច​ខាង​"
-"ក្រោម​ ៖"
+"អ្នក​ត្រូវ​កំណត់​អថេរ​មួយ​ចំនួន​នៅ​ក្នុង Pegasos OpenFirmware ដើម្បី​ឲ្យ​ប្រព័ន្ធ​របស់​អ្នក​អាច​ចាប់ផ្ដើម​លីនុច​"
+"ដោយ​ស្វ័យប្រវត្តិ ។ នៅ​ចុងបញ្ចប់​នៃ​ការ​ដំឡើង ប្រព័ន្ធ​នឹង​ចាប់ផ្ដើម​ឡើង​វិញ ។ នៅ​ត្រង់​ប្រអប់ Pegasos "
+"OpenFirmware ចូរ​កំណត់​អថេរ OpenFirmware ខាង​ក្រោម​ដើម្បី​បើក​ការ​ចាប់ផ្ដើម​ស្វ័យប្រវត្តិ ៖"
 
 #. Type: note
 #. Description
@@ -55,17 +53,17 @@ msgid ""
 " setenv auto-boot-timeout 5000\n"
 " setenv auto-boot? true"
 msgstr ""
-" setenv ឧបករណ៍​ចាប់​ផ្តើម​ ${OF_BOOT_DEVICE}\n"
-" setenv ឯកសារ​ចាប់ផ្តើម ${OF_BOOT_FILE}\n"
-" setenv ដល់ពេល​ចាប់​ផ្តើម​ដោយ​ស្វ័យ​ប្រវត្តិ​ 5000\n"
-" setenv ចាប់​ផ្តើម​ដោយ​ស្វ័យ​ប្រវត្ត​ឬ ? ពិត"
+" setenv boot-device ${OF_BOOT_DEVICE}\n"
+" setenv boot-file ${OF_BOOT_FILE}\n"
+" setenv auto-boot-timeout 5000\n"
+" setenv auto-boot? true"
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:8
 msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering :"
-msgstr "ដែល​ជំនួស​  អ្នក​អាច​ចាប់​ផ្តើម​ខឺណែល​ដោយ​បញ្ចូល​ដោយ​ដែ ។"
+msgstr "អ្នក​អាច​ចាប់​ផ្តើម​ខឺណែល​ដោយ​ដៃ ដោយ​បញ្ចូល ៖"
 
 #. Type: note
 #. Description
@@ -77,13 +75,13 @@ msgstr " ${KERNEL_BOOT}"
 #. Description
 #: ../nobootloader.templates:8
 msgid "at the OpenFirmware prompt."
-msgstr "នៅ​ឯ​ OpenFirmware ប្រអប់​បញ្ចូល ។"
+msgstr "នៅ​ត្រង់​ប្រអប់ OpenFirmware ។"
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:30
 msgid "Setting firmware variables for automatic boot"
-msgstr "កំណត់អថរ​ firmware ចាប់​ផ្តើម​ឡើង​វិញ​ដោយ​ស្វ័យ​ប្រវត្តិ​"
+msgstr "កំណត់អថរ​ firmware សម្រាប់​ការ​ចាប់ផ្ដើម​ស្វ័យប្រវត្តិ"
 
 #. Type: note
 #. Description
@@ -95,10 +93,10 @@ msgid ""
 "You can abort this by pressing any key. You will then be dropped into the "
 "NeTTrom command system where you have to execute the following commands:"
 msgstr ""
-"អថេរ​មួយ​ចំនួន​ត្រូវ​ការ​កំណត់​ក្នុង​ NeTTrom firmware សម្រាប់​ចាប់​ដំណើរការ​ប្រព័ន្ធលីនុច​​របស់​អ្នក​ដោយ​ស្វ័យ​"
-"ប្រវត្តិ​ ។ ក្នុង​ចុង​បញ្ចប់​នៃ​ស្ថានភាព​ការ​ដំឡើង​ ប្រព័ន្ធ​របស់​អ្នក​និង​ ចាប់​ផ្តើម​ឡើង​វិញ ហើយ firmware និង​"
-"ព្យាយាម​ចាប់​ផ្តើម​ឡើង​វិញ​ដោយ​ស្វ័យប្រវត្តិ​។​  អ្នក​អាច​បោះបង់​ចោល​ដោយ​សង្កត់​គន្លឺះ​ផ្សេង​ទៀត ។ បន្ទាប់​មក​ "
-"NeTTrom ត្រូវ​បាន​ចាប់​ទាញ​ចូលក្នុង​ប្រព័ន្ធ​  ​អ្នកង់ប្រត្តិបត្តិ​វា​នៅ​ទីតង​ខាង​ក្រោមn ៖s:"
+"អ្នក​ត្រូវ​កំណត់​អថេរ​មួយ​ចំនួន​នៅ​ក្នុង​កម្មវិធី​បង្កប់ Netwinder NeTTrom ដើម្បី​ឲ្យ​ប្រព័ន្ធ​របស់​អ្នក​អាច​"
+"ចាប់ផ្ដើម​លីនុច​ដោយ​ស្វ័យប្រវត្តិ ។ នៅ​ចុង​បញ្ចប់​នៃ​ការ​ដំឡើង ប្រព័ន្ធ​នឹង​ចាប់ផ្ដើម​ឡើង​វិញ ហើយ​កម្មវិធី​បង្កប់​នឹង​"
+"ប៉ុនប៉ង​ចាប់ផ្ដើម​ការ​ចាប់ផ្ដើម​ស្វ័យប្រវត្តិ ។ អ្នក​អាច​បញ្ឈប់​វា ដោយ​ចុច​គ្រាប់ចុច​ណា​មួយ ។ បន្ទាប់​មក​ប្រព័ន្ធ​នឹង​"
+"ដាក់​អ្នក​នៅ​ក្នុង​ប្រព័ន្ធ​ពាក្យបញ្ជា NeTTrom ដែល​នៅ​ទីនោះ​អ្នក​ត្រូវ​តែ​ប្រតិបត្តិ​ពាក្យបញ្ជា​ខាង​ក្រោម ៖"
 
 #. Type: note
 #. Description
@@ -125,14 +123,14 @@ msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to the next installation stage."
 msgstr ""
-"អ្នក​ត្រូវ​ការ​ធ្វើ​ដូច​នេះ​ម្តង​ ។​  ជាចុង​ក្រោយ​បញ្ចូល​ \"boot\" ពាក្យ​បញ្ជា​ ឲ្យ​ចាប់​ផ្តើមប្រព័ន្ធ​ឡើង​ដើម្បី​"
-"ដំណើរការការដំឡើង​បន្ទាប់​ទៀត​ ។​"
+"អ្នក​នឹង​ត្រូវ​ធ្វើ​វា​តែ​ម្ដង​ប៉ុណ្ណោះ ។ បន្ទាប់​ពី​នោះ សូម​បញ្ចូល​ពាក្យបញ្ជា \"boot\" ឬ ចាប់ផ្ដើម​ប្រព័ន្ធ​ឡើង​"
+"វិញ ដើម្បី​បន្ត​ទៅ​ដំណាក់កាល​ដំឡើង​បន្ទាប់​ទៀត ។"
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:50
 msgid "No boot loader installed"
-msgstr " boot loader មិន​ត្រូវ​បាន​ដំឡើង"
+msgstr "មិន​បាន​ដំឡើង​កម្មវិធី​ចាប់ផ្ដើម​ប្រព័ន្ធ"
 
 #. Type: note
 #. Description
@@ -141,8 +139,8 @@ msgid ""
 "No boot loader has been installed, either because you chose not to or "
 "because your specific architecture doesn't support a boot loader yet."
 msgstr ""
-" boot loader មិន​ត្រូវ​បាន​ដំឡើង ព្រោះ​អ្នក​មិន​បាន​ជ្រើស​រើសឬ បញ្ជាក់​ស្ថាបត្យករ​​របស់​អ្នក​មិន​បាន​គាំ​ទ្រ​ "
-"boot loader នៅ​ឡើយ​ទេ ។"
+"អ្នក​មិន​បាន​ដំឡើង​កម្មវិធី​ចាប់ផ្ដើម​ប្រព័ន្ធ​ឡើយ ព្រោះ​តែ​អ្នក​បាន​ជ្រើស​ថា​មិន​ដំឡើង ឬ ព្រោះ​តែ​ស្ថាបត្យកម្ម​"
+"របស់​អ្នក​មិន​ទាន់​គាំទ្រ​កម្មវិធី​ចាប់ផ្ដើម​នៅ​ឡើយ ។"
 
 #. Type: note
 #. Description
@@ -151,5 +149,5 @@ msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as a kernel argument."
 msgstr ""
-"អ្នក​ត្រូវ​ការ​ចាប់​ផ្តើម​ឡើង​ដោយ​ដៃ​ជាមួយ​ ${KERNEL} ខឺណែលលើ​ភាគថាស${BOOT} and ${ROOT} ត្រូវ​បាន​"
-"ឆ្លង​កាត់​ខឺណែល ។​"
+"អ្នក​នឹង​ត្រូវ​ចាប់ផ្ដើម​ដោយ​ដៃ ដោយ​ហុច​ខឺណែល ${KERNEL} ជា​អាគុយម៉ង់​ខឺណែល នៅ​លើ​ភាគថាស ${BOOT} និង "
+"${ROOT} ។"
