--- a/debian/po/bs.po
+++ b/debian/po/bs.po
@@ -14,7 +14,7 @@ msgstr ""
 "Project-Id-Version: bs\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-08-18 18:32-0600\n"
-"PO-Revision-Date: 2006-04-02 23:47+0100\n"
+"PO-Revision-Date: 2006-04-11 11:42+0100\n"
 "Last-Translator: Safir Secerovic <sapphire@linux.org.ba>\n"
 "Language-Team: Bosnian <lokal@linux.org.ba>\n"
 "MIME-Version: 1.0\n"
@@ -36,7 +36,6 @@ msgstr "Nastavi bez boot loadera"
 #. Type: note
 #. Description
 #: ../nobootloader.templates:8
-#, fuzzy
 msgid ""
 "Some variables need to be set in the Pegasos OpenFirmware in order for your "
 "system to boot linux automatically.  At the end of the installation, the "
@@ -44,7 +43,7 @@ msgid ""
 "OpenFirmware variables to enable auto-booting:"
 msgstr ""
 "Neke varijable se trebaju postaviti Pegasos OpenFirmware-u kako bi vaš "
-"sistem automatski podizao Debian.  Na kraju instalacije, sistem će se ponovo "
+"sistem automatski podizao linux.  Na kraju instalacije, sistem će se ponovo "
 "podići.  Na Pegasos OpenFirmware promptu, postavite slijedeće OpenFirmware "
 "varijable kako bi omogućili automatsko podizanje:"
 
@@ -92,7 +91,6 @@ msgstr "Postavljam varijable firmwarea za automatsko podizanje"
 #. Type: note
 #. Description
 #: ../nobootloader.templates:30
-#, fuzzy
 msgid ""
 "Some variables need to be set in the Netwinder NeTTrom firmware in order for "
 "your system to boot linux automatically.  At the end of this installation "
@@ -100,8 +98,8 @@ msgid ""
 "You can abort this by pressing any key. You will then be dropped into the "
 "NeTTrom command system where you have to execute the following commands:"
 msgstr ""
-"Neke varijable se trebaju postaviti Netwinder NeTTrom firmwareu kako bi vaš "
-"sistem automatski podizao Debian.  Na kraju ove faze instalacije, sistem će "
+"Neke varijable se trebaju postaviti Netwinder NeTTrom firmwareu kako bi Vaš "
+"sistem automatski podizao linux.  Na kraju ove faze instalacije, sistem će "
 "se ponovo podići i firmware će pokušati automatsko podizanje.  Možete "
 "prekinuti ovo pritiskanjem bilo koje tipke. Tada ćete biti prebačeni u "
 "NeTTrom komandni sistem gdje trebate ukucati sljedeće naredbe:"
@@ -127,14 +125,13 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:30
-#, fuzzy
 msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to the next installation stage."
 msgstr ""
 "Ovo trebate uraditi samo jedanput.  Nakon toga, ukucajte \"boot\" naredbu "
-"ili ponovo podignite sistem kako biste nastavili sa sljedećom instalacionom "
-"fazom Debiana."
+"ili ponovo podignite sistem kako biste nastavili sa sljedećom fazom "
+"instalacije."
 
 #. Type: note
 #. Description
@@ -155,7 +152,6 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:50
-#, fuzzy
 msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as a kernel argument."
