[l10n] [SILENT_COMMIT] Synchronising with translation files from packages/po
r36543

--- a/debian/po/dz.po
+++ b/debian/po/dz.po
@@ -14,21 +14,21 @@ msgstr ""
 "Project-Id-Version: dz\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-08-18 18:32-0600\n"
-"PO-Revision-Date: 2006-04-13 17:07+0600\n"
-"Last-Translator: Sonam Rinchen <somchen@druknet.bt>\n"
+"PO-Revision-Date: 2006-04-19 19:18+0530\n"
+"Last-Translator: \n"
 "Language-Team: Dzongkha <pgeyleg@dit.gov.bt>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: KBabel 1.10.2\n"
-"Plural-Forms:  nplurals=2; plural=(n != 1);\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #. Type: text
 #. Description
 #. Main menu item
 #: ../nobootloader.templates:4
 msgid "Continue without boot loader"
-msgstr ""
+msgstr "བུཊི་མངོན་གསལ་པ་མེདཔ་སྦེ་འཕྲོ་མཐུད།"
 
 #. Type: note
 #. Description
@@ -39,6 +39,10 @@ msgid ""
 "system will reboot.  At the Pegasos OpenFirmware prompt, set the following "
 "OpenFirmware variables to enable auto-booting:"
 msgstr ""
+"ཁྱོད་ཀྱི་རིམ་ལུགས་བུཊི་ལའི་ནགསི་རང་བཞིན་གྱིས་འགོ་རིམ་འབད་ནིའི་དོན་ལུ་པི་ག་སཱོས་ཁ་ཕྱེ་ཚོང་ལས་ཁང་གི་ཅ་ཆས་"
+"ནང་འགྱུར་ཅན་ཚུ་ལ་ལོ་ཅིག་གཞི་སྒྲིག་འབད་དགོ། གཞི་བཙུགས་འབད་མིའི་མཇུག་ལུ་རིམ་ལུགས་འདི་ལོག་བུཊི་འབད་འོང་"
+"། པི་ག་སཱོས་ཁ་ཕྱེ་ཚོང་ལས་ཁང་གི་ཅ་ཆས་ལུ་ནུས་སྤེལ་བྱིནམ་ད་ རང་བཞིན་གྱིས་བུཊི་འབད་ནིའི་ལྕོགས་ཅན་བཟོ་ནི་"
+"ལུ་འོག་གི་ཁ་ཕྱེ་ཚོང་ལས་ཁང་གི་ཅ་ཆས་འགྱུར་ཅན་ཚུ་གཞི་སྒྲིག་འབད།"
 
 #. Type: note
 #. Description
@@ -49,31 +53,35 @@ msgid ""
 " setenv auto-boot-timeout 5000\n"
 " setenv auto-boot? true"
 msgstr ""
+" setenv boot-device ${OF_BOOT_DEVICE}\n"
+" setenv boot-file ${OF_BOOT_FILE}\n"
+" setenv auto-boot-timeout 5000\n"
+" setenv auto-boot? true"
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:8
 msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering :"
-msgstr ""
+msgstr "ཐབས་གཞན་གྱིས་ ཁྱོད་ཀྱིས་ཐོ་བཀོད་འབད་བའི་ཐོག་ལས་ཀར་ནེལ་འདི་ལག་ཐོག་ལས་བུཊི་འབད་ཚུགས།"
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:8
 msgid " ${KERNEL_BOOT}"
-msgstr ""
+msgstr " ${KERNEL_BOOT}"
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:8
 msgid "at the OpenFirmware prompt."
-msgstr ""
+msgstr "ཁ་ཕྱེ་ཚོང་ལས་ཁང་གི་ཅ་ཆས་ལུ་ནུས་སྤེལ།"
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:30
 msgid "Setting firmware variables for automatic boot"
-msgstr ""
+msgstr "རང་བཞིན་གྱིས་བུཊི་འབད་ནིའི་དོན་ལུ་ཚོང་ལས་ཁང་གི་ཅ་ཆས་འགྱུར་ཅན་ཚུ་གཞི་སྒྲིག་འབད་དོ།"
 
 #. Type: note
 #. Description
@@ -85,6 +93,11 @@ msgid ""
 "You can abort this by pressing any key. You will then be dropped into the "
 "NeTTrom command system where you have to execute the following commands:"
 msgstr ""
+"ཁྱོད་ཀྱི་རིམ་ལུགས་བུཊི་ལའི་ནགསི་རང་བཞིན་གྱིས་གོ་རིམ་སྒྲིག་ནིའི་དོན་ལུ་ནེཊི་ཝཱན་ཌར་ནེཊི་ཊི་རོམ་ཚོང་ལས་ཁཁང་གི་"
+"ཅ་ཆས་ནང་འགྱུར་ཅན་ཚུ་ལ་ལོ་ཅིག་གཞི་སྒྲིག་འབད་དགོ། འ་ནི་གཞི་བཙུགས་གོ་རིམ་གྱི་མཇུག་ལུ་ རིམ་ལུགས་འདི་གིས་"
+"ལོག་བུཊི་འབད་ནི་དང་ ཚོང་ལས་ཁང་གི་ཅ་ཆས་འདི་གིས་རང་བཞིན་བུཊི་འབད་ནི་ལུ་དཔའ་བཅམ་འོང་། འ་ནི་འདི་"
+"ཁྱོད་ཀྱིས་ལྡེ་མིག་བུ་གང་རུང་ཨེབ་པའི་ཐོག་ལས་བར་བཤལ་འབད་ཚུགས། དེ་ལས་ཁྱོད་ནེཊི་ཊི་རོམ་བརྡ་བཀོད་རིམ་ལུགས་"
+"ནང་ལུ་བཞག་ནི་དང་ཁྱོད་ཀྱིས་འོག་གི་བརྡ་བཀོད་ཚུ་ལག་ལེན་འཐབ་དགོ།"
 
 #. Type: note
 #. Description
@@ -97,6 +110,12 @@ msgid ""
 "   setenv cmdappend ${CMDAPPEND}\n"
 "   save-all"
 msgstr ""
+"   setenv kernconfig fs\n"
+"   setenv kerndev ${KERNDEV}\n"
+"   setenv kernfile ${KERNFILE}\n"
+"   setenv rootdev ${ROOTDEV}\n"
+"   setenv cmdappend ${CMDAPPEND}\n"
+"   save-all"
 
 #. Type: note
 #. Description
@@ -105,12 +124,14 @@ msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to the next installation stage."
 msgstr ""
+"འ་ནི་འདི་ཁྱོད་ཀྱིས་ཚར་གཅིག་རྐྱངམ་ཅིག་འབད་དགོ། ཤུལ་ལས་ \"boot\"བརྡ་བཀོད་བཙུགས་ ཡང་ན་ གཞི་བཙུགས་"
+"འབད་ནིའི་གོ་རིམ་ཤུལ་མམ་ལུ་འཕྲོ་མཐུད་ནི་ལུ་རིམ་ལུགས་འདི་ལོག་བུཊི་འབད།"
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:50
 msgid "No boot loader installed"
-msgstr ""
+msgstr "བུཊི་མངོན་གསལ་པ་གཞི་བཙུགས་མ་འབད་བས།"
 
 #. Type: note
 #. Description
@@ -119,6 +140,8 @@ msgid ""
 "No boot loader has been installed, either because you chose not to or "
 "because your specific architecture doesn't support a boot loader yet."
 msgstr ""
+"བུཊི་མངོན་གསལ་པ་འདི་གཞི་བཙུགས་མ་འབད་བས་ ག་ཅི་སྦེ་ཟེར་བ་ཅིན་ཁྱོད་ཀྱིས་གདམ་ཁ་མ་རྐྱབས་པས་ ཡང་ན་ "
+"ག་ཅི་སྦེ་ཟེར་བ་ཅིན་ཁྱོད་ཀྱི་དམིགས་བསལ་བཟོ་བཀོད་འདི་གིས་ད་ཚུན་བུཊི་མངོན་གསལ་པ་ལུ་རྒྱབ་སྐྱོར་མ་འབད་བས།"
 
 #. Type: note
 #. Description
@@ -127,3 +150,5 @@ msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as a kernel argument."
 msgstr ""
+"ཀར་ནེལ་སྒྲུབ་རྟགས་བཟུམ་སྦེ་རྩིས་སྤྲོད་འབད་ཡོད་མི་${BOOT} དང་ ${ROOT}བར་བཅད་ལུ་ཀར་ནེལ་ "
+"${KERNEL}འདི་དང་མཉམ་ཁྱོད་ཀྱིས་ལག་ཐོག་ལས་བུཊི་འབད་དགོ"
