[l10n] [SILENT_COMMIT] Synchronising with translation files from packages/po
r36573

--- a/debian/po/ku.po
+++ b/debian/po/ku.po
@@ -3,26 +3,21 @@
 #
 # DO NOT MODIFY IT DIRECTLY : SUCH CHANGES WILL BE LOST
 # 
-# translation of debian-installer.po to Kurdish
-# Turkish messages for debian-installer.
-# Copyright (C) 2003, 2004 Software in the Public Interest, Inc.
+# Kurdish messages for debian-installer.
+# Copyright (C) 2003 Software in the Public Interest, Inc.
 # This file is distributed under the same license as debian-installer.
-# Erdal Ronahi <erdal.ronahi@gmail.com, pckurd@hotmail.com>, 2005.
-#
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-08-18 18:32-0600\n"
-"PO-Revision-Date: 2005-09-02 11:55+0200\n"
+"PO-Revision-Date: 2006-04-20 06:15+0000\n"
 "Last-Translator: Erdal Ronahi <erdal.ronahi@gmail.com>\n"
 "Language-Team: Kurdish <gnu-ku-wergerandin@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural= n != 1\n"
-"X-Generator: KBabel 1.10\n"
 
 #. Type: text
 #. Description
@@ -50,7 +45,7 @@ msgid ""
 " setenv auto-boot-timeout 5000\n"
 " setenv auto-boot? true"
 msgstr ""
-"·setenv·boot-device·${OF_BOOT_DEVICE}\n"
+" ·setenv·boot-device·${OF_BOOT_DEVICE}\n"
 "·setenv·boot-file·${OF_BOOT_FILE}\n"
 "·setenv·auto-boot-timeout·5000\n"
 "·setenv·auto-boot?·erê"
@@ -102,6 +97,12 @@ msgid ""
 "   setenv cmdappend ${CMDAPPEND}\n"
 "   save-all"
 msgstr ""
+"   setenv kernconfig fs\n"
+"   setenv kerndev ${KERNDEV}\n"
+"   setenv kernfile ${KERNFILE}\n"
+"   setenv rootdev ${ROOTDEV}\n"
+"   setenv cmdappend ${CMDAPPEND}\n"
+"   save-all"
 
 #. Type: note
 #. Description
