--- a/debian/po/th.po
+++ b/debian/po/th.po
@@ -12,7 +12,7 @@ msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-08-18 18:32-0600\n"
-"PO-Revision-Date: 2006-04-17 17:19+0700\n"
+"PO-Revision-Date: 2006-04-24 20:02+0700\n"
 "Last-Translator: Theppitak Karoonboonyanan <thep@linux.thai.net>\n"
 "Language-Team: Thai <l10n@opentle.org>\n"
 "MIME-Version: 1.0\n"
@@ -24,7 +24,7 @@ msgstr ""
 #. Main menu item
 #: ../nobootloader.templates:4
 msgid "Continue without boot loader"
-msgstr ""
+msgstr "ติดตั้งต่อโดยไม่มีบูตโหลดเดอร์"
 
 #. Type: note
 #. Description
@@ -35,6 +35,10 @@ msgid ""
 "system will reboot.  At the Pegasos OpenFirmware prompt, set the following "
 "OpenFirmware variables to enable auto-booting:"
 msgstr ""
+"คุณจำเป็นต้องตั้งค่าตัวแปรบางตัวใน Pegasos OpenFirmware "
+"เพื่อให้เครื่องของคุณบูตเข้าลินุกซ์โดยอัตโนมัติ ในตอนท้ายของการติดตั้ง ระบบจะบูตเครื่องใหม่ "
+"ให้ตั้งค่าตัวแปรของ OpenFirmware ที่บรรทัดคำสั่งของ Pegasos OpenFirmware ดังนี้ "
+"เพื่อเปิดใช้การบูตอัตโนมัติ:"
 
 #. Type: note
 #. Description
@@ -45,31 +49,35 @@ msgid ""
 " setenv auto-boot-timeout 5000\n"
 " setenv auto-boot? true"
 msgstr ""
+" setenv boot-device ${OF_BOOT_DEVICE}\n"
+" setenv boot-file ${OF_BOOT_FILE}\n"
+" setenv auto-boot-timeout 5000\n"
+" setenv auto-boot? true"
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:8
 msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering :"
-msgstr ""
+msgstr "หรือมิฉะนั้น คุณก็ยังสามารถสั่งบูตเคอร์เนลเองโดยป้อนคำสั่ง:"
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:8
 msgid " ${KERNEL_BOOT}"
-msgstr ""
+msgstr " ${KERNEL_BOOT}"
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:8
 msgid "at the OpenFirmware prompt."
-msgstr ""
+msgstr "ที่บรรทัดคำสั่งของ OpenFirmware"
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:30
 msgid "Setting firmware variables for automatic boot"
-msgstr ""
+msgstr "กำลังตั้งค่าตัวแปรเฟิร์มแวร์สำหรับการบูตอัตโนมัติ"
 
 #. Type: note
 #. Description
@@ -81,6 +89,10 @@ msgid ""
 "You can abort this by pressing any key. You will then be dropped into the "
 "NeTTrom command system where you have to execute the following commands:"
 msgstr ""
+"คุณจำเป็นต้องตั้งค่าตัวแปรบางตัวในเฟิร์มแวร์ Netwinder NeTTrom "
+"เพื่อให้เครื่องของคุณบูตเข้าลินุกซ์โดยอัตโนมัติ ในตอนท้ายของการติดตั้ง ระบบจะบูตเครื่องใหม่ "
+"และเฟิร์มแวร์จะพยายามบูตอัตโนมัติ คุณสามารถยกเลิกการบูตดังกล่าวได้โดยกดปุ่มใดๆ ก็ได้ "
+"แล้วคุณจะเข้าสู่ระบบคำสั่งของ NeTTrom ซึ่งคุณสามารถสั่งคำสั่งต่อไปนี้ได้:"
 
 #. Type: note
 #. Description
@@ -93,6 +105,12 @@ msgid ""
 "   setenv cmdappend ${CMDAPPEND}\n"
 "   save-all"
 msgstr ""
+"   setenv kernconfig fs\n"
+"   setenv kerndev ${KERNDEV}\n"
+"   setenv kernfile ${KERNFILE}\n"
+"   setenv rootdev ${ROOTDEV}\n"
+"   setenv cmdappend ${CMDAPPEND}\n"
+"   save-all"
 
 #. Type: note
 #. Description
@@ -101,12 +119,14 @@ msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to the next installation stage."
 msgstr ""
+"การสั่งดังกล่าวเพียงครั้งเดียวก็เพียงพอ ในครั้งต่อไป เพียงป้อนคำสั่ง \"boot\" "
+"หรือบูตเครื่องใหม่เพื่อเข้าสู่ขั้นตอนการติดตั้งขั้นต่อไป"
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:50
 msgid "No boot loader installed"
-msgstr ""
+msgstr "ไม่ได้ติดตั้งบูตโหลดเดอร์"
 
 #. Type: note
 #. Description
@@ -115,6 +135,8 @@ msgid ""
 "No boot loader has been installed, either because you chose not to or "
 "because your specific architecture doesn't support a boot loader yet."
 msgstr ""
+"ไม่ได้ติดตั้งบูตโหลดเดอร์ อาจจะเพราะคุณเลือกที่จะไม่ติดตั้ง "
+"หรือเพราะสถาปัตยกรรมของเครื่องคุณยังไม่สนับสนุนบูตโหลดเดอร์"
 
 #. Type: note
 #. Description
@@ -123,3 +145,5 @@ msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as a kernel argument."
 msgstr ""
+"คุณต้องสั่งบูตเองโดยใช้เคอร์เนล ${KERNEL} ที่พาร์ทิชัน ${BOOT} โดยส่งอาร์กิวเมนต์ ${ROOT} "
+"ให้กับเคอร์เนล"
