--- a/debian/po/nn.po
+++ b/debian/po/nn.po
@@ -9,21 +9,21 @@
 # Norwegian Nynorsk messages for debian-installer.
 # Copyright (C) 2003 Software in the Public Interest, Inc.
 # This file is distributed under the same license as debian-installer.
-# Håvard Korsvoll <korsvoll@skulelinux.no>, 2004, 2005.
+# Håvard Korsvoll <korsvoll@skulelinux.no>, 2004, 2005, 2006.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: nn\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-08-18 18:32-0600\n"
-"PO-Revision-Date: 2005-10-15 20:16+0200\n"
-"Last-Translator: \n"
-"Language-Team: Norwegian Nynorsk <en@li.org>\n"
+"PO-Revision-Date: 2006-05-01 23:22+0200\n"
+"Last-Translator: Håvard Korsvoll <korsvoll@skulelinux.no>\n"
+"Language-Team: Norwegian nynorsk <i18n-nn@lister.ping.uio.no>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "nynorsk@lists.debian.org>\n"
-"X-Generator: KBabel 1.9.1\n"
+"X-Generator: KBabel 1.10.2\n"
 "Plural-Forms:  nplurals=2; plural=(n != 1);\n"
 
 #. Type: text
@@ -43,9 +43,9 @@ msgid ""
 "OpenFirmware variables to enable auto-booting:"
 msgstr ""
 "Nokre variablar må setjast i Pegasos OpenFirmware for at systemet ditt skal "
-"starta opp automatisk. Ved slutten av installasjonen vil systemet starta på "
+"starte opp automatisk. Ved slutten av installasjonen vil systemet starte på "
 "nytt. På kommandolinja til Pegasos OpenFirmware kan du slå på automatisk "
-"oppstart ved å setja desse OpenFirmware-variablane:"
+"oppstart ved å setje desse OpenFirmware-variablane:"
 
 #. Type: note
 #. Description
@@ -67,8 +67,8 @@ msgstr ""
 msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering :"
 msgstr ""
-"Alternativt, vil du vere i stand til å starta opp kjerna manuelt ved å "
-"skriva inn:"
+"Alternativt, vil du vere i stand til å starte opp kjerna manuelt ved å "
+"skrive inn:"
 
 #. Type: note
 #. Description
@@ -99,10 +99,10 @@ msgid ""
 "NeTTrom command system where you have to execute the following commands:"
 msgstr ""
 "Nokre variablar må setjast i maskinvara Netwinder NeTTrom for at systemet "
-"ditt skal starta opp automatisk. Ved slutten av installasjonen vil systemet "
-"starta på nytt og maskinvara vil prøve å starta opp automatisk. Du kan "
+"ditt skal starte opp automatisk. Ved slutten av installasjonen vil systemet "
+"starte på nytt og maskinvara vil prøve å starte opp automatisk. Du kan "
 "avbryte dette ved å trykkja på ein tast. Du vil så bli kasta inn i "
-"kommandosystemet til NeTTrom der du må køyra desse kommandoane:"
+"kommandosystemet til NeTTrom der du må køyre desse kommandoane:"
 
 #. Type: note
 #. Description
@@ -147,7 +147,7 @@ msgid ""
 "because your specific architecture doesn't support a boot loader yet."
 msgstr ""
 "Ingen oppstartslastar er installert. Det er anten fordi du har valt å ikkje "
-"installera nokon oppstartslastar eller fordi arkitekturen ikkje støttar ein "
+"installere nokon oppstartslastar eller fordi arkitekturen ikkje støttar ein "
 "oppstartslastar enno."
 
 #. Type: note
@@ -157,5 +157,5 @@ msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as a kernel argument."
 msgstr ""
-"Du må starta opp manuelt med kjerna ${KERNEL} på partisjonen ${BOOT} og "
+"Du må starte opp manuelt med kjerna ${KERNEL} på partisjonen ${BOOT} og "
 "senda ${ROOT} som argument til kjerna."
