--- a/debian/po/da.po
+++ b/debian/po/da.po
@@ -14,11 +14,11 @@ msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-08-18 18:32-0600\n"
-"PO-Revision-Date: 2005-08-20 20:30+0200\n"
+"PO-Revision-Date: 2006-05-01 00:01+0200\n"
 "Last-Translator: Claus Hindsgaul <claus.hindsgaul@gmail.com>\n"
 "Language-Team: Danish\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=ISO-8859-1\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: KBabel 1.11.2\n"
 "Plural-Forms:  nplurals=2; plural=(n != 1);\n"
@@ -28,7 +28,7 @@ msgstr ""
 #. Main menu item
 #: ../nobootloader.templates:4
 msgid "Continue without boot loader"
-msgstr "Fortsæt uden opstartsindlæser"
+msgstr "FortsÃ¦t uden opstartsindlÃ¦ser"
 
 #. Type: note
 #. Description
@@ -39,9 +39,9 @@ msgid ""
 "system will reboot.  At the Pegasos OpenFirmware prompt, set the following "
 "OpenFirmware variables to enable auto-booting:"
 msgstr ""
-"Der skal sættes nogle variable i Pegasos OpenFirmware, for at dit system kan "
+"Der skal sÃ¦ttes nogle variable i Pegasos OpenFirmware, for at dit system kan "
 "starte Linux op automatisk. Ved afslutningen af installationen vil systemet "
-"genstarte. Sæt følgende OpenFirmware-variable ved Pegasos Openfirmware's "
+"genstarte. SÃ¦t fÃ¸lgende OpenFirmware-variable ved Pegasos Openfirmware's "
 "prompt for at aktivere automatisk opstart:"
 
 #. Type: note
@@ -81,7 +81,7 @@ msgstr "ved OpenFirmware-prompten."
 #. Description
 #: ../nobootloader.templates:30
 msgid "Setting firmware variables for automatic boot"
-msgstr "Sætter firmware-variable til automatisk opstart"
+msgstr "SÃ¦tter firmware-variable til automatisk opstart"
 
 #. Type: note
 #. Description
@@ -93,11 +93,11 @@ msgid ""
 "You can abort this by pressing any key. You will then be dropped into the "
 "NeTTrom command system where you have to execute the following commands:"
 msgstr ""
-"Der skal sættes nogle variable i Netwinder NeTTrom-firmwaren for at dit "
+"Der skal sÃ¦ttes nogle variable i Netwinder NeTTrom-firmwaren for at dit "
 "system kan starte Linux op automatisk. Ved afslutningen af dette "
-"installationsstadium vil systemet genstarte, og firmwaren vil forsøge at "
-"genstarte automatisk. Du kan afbryde dette ved et tryk på en tast. Det vil "
-"føre dig til NeTTroms kommandosystem, hvor du skal udføre følgende "
+"installationsstadium vil systemet genstarte, og firmwaren vil forsÃ¸ge at "
+"genstarte automatisk. Du kan afbryde dette ved et tryk pÃ¥ en tast. Det vil "
+"fÃ¸re dig til NeTTroms kommandosystem, hvor du skal udfÃ¸re fÃ¸lgende "
 "kommandoer:"
 
 #. Type: note
@@ -125,14 +125,14 @@ msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to the next installation stage."
 msgstr ""
-"Du behøver kun at gøre dette én gang. Giv derefter kommandoen \"boot\" eller "
-"genstart systemet for at fortsætte til næste installationsstadium."
+"Du behÃ¸ver kun at gÃ¸re dette Ã©n gang. Giv derefter kommandoen \"boot\" eller "
+"genstart systemet for at fortsÃ¦tte til nÃ¦ste installationsstadium."
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:50
 msgid "No boot loader installed"
-msgstr "Ingen opstartsindlæser installeret"
+msgstr "Ingen opstartsindlÃ¦ser installeret"
 
 #. Type: note
 #. Description
@@ -141,9 +141,9 @@ msgid ""
 "No boot loader has been installed, either because you chose not to or "
 "because your specific architecture doesn't support a boot loader yet."
 msgstr ""
-"Der er ikke installeret nogen opstartsindlæser. Enten fordi du har valgt "
-"ikke at gøre det, eller fordi din computers arkitektur endnu ikke "
-"understøtter en opstartsindlæser."
+"Der er ikke installeret nogen opstartsindlÃ¦ser. Enten fordi du har valgt "
+"ikke at gÃ¸re det, eller fordi din computers arkitektur endnu ikke "
+"understÃ¸tter en opstartsindlÃ¦ser."
 
 #. Type: note
 #. Description
@@ -152,5 +152,5 @@ msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as a kernel argument."
 msgstr ""
-"Du bliver nødt til at starte op manuelt med ${KERNEL}-kernen på partitionen "
+"Du bliver nÃ¸dt til at starte op manuelt med ${KERNEL}-kernen pÃ¥ partitionen "
 "${BOOT} og give kommandoen ${ROOT} som kerneparameter."
