--- a/debian/po/hr.po
+++ b/debian/po/hr.po
@@ -13,11 +13,11 @@ msgstr ""
 "Project-Id-Version: Debian-installer 1st-stage master file HR\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-08-18 18:32-0600\n"
-"PO-Revision-Date: 2004-09-30 21:45+0200\n"
+"PO-Revision-Date: 2005-03-05 21:51+0100\n"
 "Last-Translator: Krunoslav Gernhard <kruno@linux.hr>\n"
 "Language-Team: Croatian <lokalizacija@linux.hr>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=iso-8859-2\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
 #. Type: text
@@ -25,7 +25,7 @@ msgstr ""
 #. Main menu item
 #: ../nobootloader.templates:4
 msgid "Continue without boot loader"
-msgstr "Nastavi bez boot uèitavaèa"
+msgstr "Nastavi bez boot uÄitavaÄa"
 
 #. Type: note
 #. Description
@@ -37,9 +37,9 @@ msgid ""
 "system will reboot.  At the Pegasos OpenFirmware prompt, set the following "
 "OpenFirmware variables to enable auto-booting:"
 msgstr ""
-"Da bi va¹ sustav automatski podizao Debian, neke varijable moraju biti "
-"postavljene u Pegasos OpenFirmware. Na kraju instalacije sustav æe se ponovo "
-"podiæi. Na Pegasos OpenFirmware promptu postavite slijedeæe OpenFirmware "
+"Da bi vaÅ¡ sustav automatski podizao Debian, neke varijable moraju biti "
+"postavljene u Pegasos OpenFirmware. Na kraju instalacije sustav Ä‡e se ponovo "
+"podiÄ‡i. Na Pegasos OpenFirmware promptu postavite slijedeÄ‡e OpenFirmware "
 "varijable za automatsko podizanje sustava:"
 
 #. Type: note
@@ -61,7 +61,7 @@ msgstr ""
 #: ../nobootloader.templates:8
 msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering :"
-msgstr "Alternativno, moæi æete ruèno bootati kernel unoseæi:"
+msgstr "Alternativno, moÄ‡i Ä‡ete ruÄno bootati kernel unoseÄ‡i:"
 
 #. Type: note
 #. Description
@@ -92,11 +92,11 @@ msgid ""
 "You can abort this by pressing any key. You will then be dropped into the "
 "NeTTrom command system where you have to execute the following commands:"
 msgstr ""
-"Da bi va¹ sustav automatski podizao Debian, neke varijable moraju biti "
+"Da bi vaÅ¡ sustav automatski podizao Debian, neke varijable moraju biti "
 "postavljene u Netwinder NeTTrom 'firmware'. Na kraju ovog stupnja "
-"instalacije sustav æe se ponovo podiæi, a 'firmware' æe se poku¹ati "
-"automatski pokrenuti. To mo¾ete prekinuti pritiskom na bilo koju tipku. Naæi "
-"æete se u NeTTrom zapovjednom sustavu, gdje morate izvr¹iti slijedeæe "
+"instalacije sustav Ä‡e se ponovo podiÄ‡i, a 'firmware' Ä‡e se pokuÅ¡ati "
+"automatski pokrenuti. To moÅ¾ete prekinuti pritiskom na bilo koju tipku. NaÄ‡i "
+"Ä‡ete se u NeTTrom zapovjednom sustavu, gdje morate izvrÅ¡iti slijedeÄ‡e "
 "naredbe:"
 
 #. Type: note
@@ -125,14 +125,14 @@ msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to the next installation stage."
 msgstr ""
-"To morate uèiniti samo jednom. Nakon toga unesite naredbu 'boot', ili ponovo "
-"pokrenite sustav da nastavite do slijedeæeg stupnja instalacije."
+"To morate uÄiniti samo jednom. Nakon toga unesite naredbu 'boot', ili ponovo "
+"pokrenite sustav da nastavite do slijedeÄ‡eg stupnja instalacije."
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:50
 msgid "No boot loader installed"
-msgstr "Boot uèitavaè nije instaliran"
+msgstr "Boot uÄitavaÄ nije instaliran"
 
 #. Type: note
 #. Description
@@ -141,8 +141,8 @@ msgid ""
 "No boot loader has been installed, either because you chose not to or "
 "because your specific architecture doesn't support a boot loader yet."
 msgstr ""
-"Boot uèitavaè nije instaliran, ili zato ¹to ste tako odredili, ili zato ¹to "
-"va¹a arhitektura jo¹ nije podr¾ana od boot uèitavaèa."
+"Boot uÄitavaÄ nije instaliran, ili zato Å¡to ste tako odredili, ili zato Å¡to "
+"vaÅ¡a arhitektura joÅ¡ nije podrÅ¾ana od boot uÄitavaÄa."
 
 #. Type: note
 #. Description
@@ -152,5 +152,5 @@ msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as a kernel argument."
 msgstr ""
-"Morat æete ruèno podignuti sustav s kernelom ${KERNEL} na particiji ${BOOT} "
-"i ${ROOT}, kao argumentima proslijeğenim kernelu."
+"Morat Ä‡ete ruÄno podignuti sustav s kernelom ${KERNEL} na particiji ${BOOT} "
+"i ${ROOT}, kao argumentima proslijeÄ‘enim kernelu."
