[l10n] [SILENT_COMMIT] Synchronising with translation files from packages/po
r37146

--- a/debian/po/eo.po
+++ b/debian/po/eo.po
@@ -5,19 +5,17 @@
 # 
 # translation of eo.po to Esperanto 
 # Esperanto messages for debian-installer.
-# Debian Installer master translation file template
-# Don't forget to properly fill-in the header of PO files
-# Debian Installer translators, please read the D-I i18n documentation
-# in doc/i18n/i18n.txt
-# Samuel Gimeno <sgimeno@gmail.com>, 2005.
-# Serge Leblanc <serge.leblanc@wanadoo.fr>, 2005.
+# Copyright (C) 2005 Software in the Public Interest, Inc.
+# This file is distributed under the same license as debian-installer.
 #
+# Samuel Gimeno <sgimeno@gmail.com>, 2005.
+# Serge Leblanc <serge.leblanc@wanadoo.fr>, 2005-2006.
 msgid ""
 msgstr ""
 "Project-Id-Version: eo\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-08-18 18:32-0600\n"
-"PO-Revision-Date: 2005-07-18 21:00+0200\n"
+"PO-Revision-Date: 2006-05-09 11:28+0200\n"
 "Last-Translator: Serge Leblanc <serge.leblanc@wanadoo.fr>\n"
 "Language-Team: Esperanto <debian-l10n-esperanto@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -29,7 +27,7 @@ msgstr ""
 #. Main menu item
 #: ../nobootloader.templates:4
 msgid "Continue without boot loader"
-msgstr "Daŭrigu sen praŝargilo"
+msgstr "Daŭrigu sen ekŝargilo"
 
 #. Type: note
 #. Description
@@ -41,9 +39,9 @@ msgid ""
 "OpenFirmware variables to enable auto-booting:"
 msgstr ""
 "Kelkaj variabloj en la firmvaro 'Pegasos OpenFirmware' bezonas agordaĵon por "
-"aŭtomate praŝargi Linukson. La sistemo reŝargiĝos post la instalado. Akomodu "
+"aŭtomate startigi Linukson. La sistemo reŝargiĝos post la instalado. Akomodu "
 "la sekvantaj variabloj dum la 'Pegasos OpenFirmware' invito por aktivigi la "
-"aŭtomatan praŝargon."
+"aŭtomatan ekŝargon."
 
 #. Type: note
 #. Description
@@ -95,7 +93,7 @@ msgid ""
 "NeTTrom command system where you have to execute the following commands:"
 msgstr ""
 "Kelkaj variabloj en la firmvaro 'Netwinder NeTTrom' bezonas agordaĵon por "
-"aŭtomate praŝargi Linukson. La sistemo reŝargiĝos post ĉi tiu instalada fazo "
+"aŭtomate startigi Linukson. La sistemo reŝargiĝos post ĉi tiu instalada fazo "
 "kaj la firmvaro strebos de ekfunkcii aŭtomate. Tiu ekfunkcio eble ĉesigu per "
 "tajpi ajnan klavon. Tiuokaze, vi alkondukos inviton de 'NeTTrom' kie vi "
 "plenumendos la sekvantajn ordonojn:"
@@ -132,7 +130,7 @@ msgstr ""
 #. Description
 #: ../nobootloader.templates:50
 msgid "No boot loader installed"
-msgstr "Neniu instala praŝargilo"
+msgstr "Neniu instala ekŝargilo"
 
 #. Type: note
 #. Description
@@ -141,8 +139,8 @@ msgid ""
 "No boot loader has been installed, either because you chose not to or "
 "because your specific architecture doesn't support a boot loader yet."
 msgstr ""
-"Neniu praŝargilo estas instalita, nu vi memvole decidis ne fari tion, nu "
-"neniu praŝargilo nuntempe stiras vian aparataron."
+"Neniu ekŝargilo estas instalita, nu vi memvole decidis ne fari tion, nu "
+"neniu ekŝargilo nuntempe stiras vian aparataron."
 
 #. Type: note
 #. Description
