--- a/debian/po/zh_TW.po
+++ b/debian/po/zh_TW.po
@@ -12,7 +12,7 @@ msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-08-18 18:32-0600\n"
-"PO-Revision-Date: 2005-04-19 07:06+0800\n"
+"PO-Revision-Date: 2006-01-23 17:48-0600\n"
 "Last-Translator: Tetralet <tetralet@pchome.com.tw>\n"
 "Language-Team: Debian-user in Chinese [Big5] <debian-chinese-big5@lists."
 "debian.org>\n"
@@ -135,8 +135,8 @@ msgid ""
 "No boot loader has been installed, either because you chose not to or "
 "because your specific architecture doesn't support a boot loader yet."
 msgstr ""
-"沒有安裝任何開機程式，其原因可能是您選擇了不安裝，或者是您的特殊系統尚未支援"
-"任何開機程式。"
+"沒有安裝任何開機程式，其原因可能是您選擇了不安裝，或者是您的特殊系統平台尚未"
+"支援任何開機程式。"
 
 #. Type: note
 #. Description
