--- a/debian/po/nn.po
+++ b/debian/po/nn.po
@@ -16,9 +16,9 @@ msgstr ""
 "Project-Id-Version: nn\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-08-18 18:32-0600\n"
-"PO-Revision-Date: 2006-05-01 23:22+0200\n"
+"PO-Revision-Date: 2006-05-14 18:07+0200\n"
 "Last-Translator: Håvard Korsvoll <korsvoll@skulelinux.no>\n"
-"Language-Team: Norwegian nynorsk <i18n-nn@lister.ping.uio.no>\n"
+"Language-Team: Norwegian Nynorsk <nn@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -129,7 +129,7 @@ msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to the next installation stage."
 msgstr ""
-"Du vil måtte gjera dette berre ein gong. Etterpå skriv du inn «boot»-"
+"Du vil måtte gjere dette berre ein gong. Etterpå skriv du inn «boot»-"
 "kommandoen eller start systemet på ny for å halde fram med det neste steget "
 "i installasjonen."
 
