[l10n] [SILENT_COMMIT] Synchronising with translation files from packages/po
r37355

--- a/debian/po/it.po
+++ b/debian/po/it.po
@@ -26,7 +26,7 @@ msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-08-18 18:32-0600\n"
-"PO-Revision-Date: 2005-09-21 09:43+0200\n"
+"PO-Revision-Date: 2006-05-15 13:09+0200\n"
 "Last-Translator: Giuseppe Sacco <eppesuig@debian.org>\n"
 "Language-Team:   Italian <debian-l10n-italian@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -107,7 +107,7 @@ msgstr ""
 "sistema venga avviato in maniera automatica. Al termine di questo passo di "
 "installazione il sistema verrà riavviato e il firmware proverà l'avvio "
 "automatico. Si può bloccare questa operazione premendo un tasto qualsiasi; "
-"dopodiché si avrà accesso al \"NeTTrom command system\" dove devono essere "
+"dopodiché si avrà accesso al «NeTTrom command system» dove devono essere "
 "eseguiti i seguenti comandi:"
 
 #. Type: note
@@ -136,14 +136,14 @@ msgid ""
 "or reboot the system to proceed to the next installation stage."
 msgstr ""
 "Questa operazione dovrà essere fatta solo la prima volta. Dopodiché sarà "
-"necessario eseguire il comando \"boot\" oppure riavviare il sistema per "
+"necessario eseguire il comando «boot» oppure riavviare il sistema per "
 "proseguire con la seconda fase dell'installazione."
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:50
 msgid "No boot loader installed"
-msgstr "Nessun \"boot loader\" installato"
+msgstr "Nessun «boot loader» installato"
 
 #. Type: note
 #. Description
@@ -152,7 +152,7 @@ msgid ""
 "No boot loader has been installed, either because you chose not to or "
 "because your specific architecture doesn't support a boot loader yet."
 msgstr ""
-"Nessun \"boot loader\" è stato installato perché così è stato richiesto o "
+"Nessun «boot loader» è stato installato perché così è stato richiesto o "
 "perché non ce ne sono ancora disponibili per questa architettura."
 
 #. Type: note
