[l10n] [SILENT_COMMIT] Synchronising with translation files from packages/po
r37369

--- a/debian/po/eo.po
+++ b/debian/po/eo.po
@@ -15,7 +15,7 @@ msgstr ""
 "Project-Id-Version: eo\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-08-18 18:32-0600\n"
-"PO-Revision-Date: 2006-05-09 11:28+0200\n"
+"PO-Revision-Date: 2006-05-16 17:10+0200\n"
 "Last-Translator: Serge Leblanc <serge.leblanc@wanadoo.fr>\n"
 "Language-Team: Esperanto <debian-l10n-esperanto@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -62,7 +62,7 @@ msgstr ""
 #: ../nobootloader.templates:8
 msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering :"
-msgstr "Alimaniere, vi povos mane praŝargi la kernon per enskribu:"
+msgstr "Alimaniere, vi povos mane ekŝargi la kernon per enskribu:"
 
 #. Type: note
 #. Description
@@ -80,7 +80,7 @@ msgstr "dum la firmvara 'OpenFirmware' invito"
 #. Description
 #: ../nobootloader.templates:30
 msgid "Setting firmware variables for automatic boot"
-msgstr "Akomodi firmvarajn variablojn por aŭtomate praŝargi"
+msgstr "Akomodi firmvarajn variablojn por aŭtomate ekŝargi"
 
 #. Type: note
 #. Description
