[l10n] [SILENT_COMMIT] Synchronising with translation files from packages/po
r37442

--- a/debian/po/nl.po
+++ b/debian/po/nl.po
@@ -14,7 +14,7 @@ msgstr ""
 "Project-Id-Version: nl\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-08-18 18:32-0600\n"
-"PO-Revision-Date: 2005-09-17 22:58+0200\n"
+"PO-Revision-Date: 2006-05-19 12:04+0100\n"
 "Last-Translator: Bart Cornelis <cobaco@linux.be>\n"
 "Language-Team: Dutch <debian-l10n-dutch@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -127,9 +127,9 @@ msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to the next installation stage."
 msgstr ""
-"U hoeft dit slechts eenmalig te doen. Geef daarna het commando 'boot' of "
-"herstart het systeem om verder te gaan met de volgende fase van de "
-"installatie."
+"U hoeft dit slechts eenmalig te doen. Om verder te gaan met de volgende fase "
+"van de installatie geeft u vervolgens het commando 'boot' of herstart u het "
+"systeem."
 
 #. Type: note
 #. Description
