[l10n] [SILENT_COMMIT] Synchronising with translation files from packages/po
r37496

--- a/debian/po/ca.po
+++ b/debian/po/ca.po
@@ -14,7 +14,7 @@ msgstr ""
 "Project-Id-Version: debian-installer 1.1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-08-18 18:32-0600\n"
-"PO-Revision-Date: 2006-04-02 21:56+0200\n"
+"PO-Revision-Date: 2006-05-20 23:39+0200\n"
 "Last-Translator: Jordi Mallach <jordi@debian.org>\n"
 "Language-Team: Catalan <debian-l10n-catalan@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -125,7 +125,7 @@ msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to the next installation stage."
 msgstr ""
-"Només tindreu que fer això una vegada. Després, introduïu l'ordre «boot» o "
+"Només us caldrà fer això una vegada. Després, introduïu l'ordre «boot» o "
 "torneu a arrencar el sistema per a continuar amb el següent pas de la "
 "instal·lació."
 
@@ -152,5 +152,5 @@ msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as a kernel argument."
 msgstr ""
-"Necessitareu arrencar manualment amb el nucli ${KERNEL} en la partició "
+"Necessitareu arrencar manualment amb el nucli ${KERNEL} a la partició "
 "${BOOT} i passar ${ROOT} com a argument per al nucli."
