--- a/debian/po/se.po
+++ b/debian/po/se.po
@@ -16,13 +16,13 @@ msgstr ""
 "Project-Id-Version: se\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-08-18 18:32-0600\n"
-"PO-Revision-Date: 2006-04-06 15:47+0200\n"
+"PO-Revision-Date: 2006-05-24 20:20+0200\n"
 "Last-Translator: Børre Gaup <boerre@skolelinux.no>\n"
-"Language-Team: Northern Sami <se@li.org>\n"
+"Language-Team: Northern Sami <i18n-sme@lister.ping.uio.no>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.11.1\n"
+"X-Generator: KBabel 1.11.2\n"
 
 #. Type: text
 #. Description
@@ -50,6 +50,10 @@ msgid ""
 " setenv auto-boot-timeout 5000\n"
 " setenv auto-boot? true"
 msgstr ""
+" setenv boot-device ${OF_BOOT_DEVICE}\n"
+" setenv boot-file ${OF_BOOT_FILE}\n"
+" setenv auto-boot-timeout 5000\n"
+" setenv auto-boot? true"
 
 #. Type: note
 #. Description
@@ -98,6 +102,12 @@ msgid ""
 "   setenv cmdappend ${CMDAPPEND}\n"
 "   save-all"
 msgstr ""
+"   setenv kernconfig fs\n"
+"   setenv kerndev ${KERNDEV}\n"
+"   setenv kernfile ${KERNFILE}\n"
+"   setenv rootdev ${ROOTDEV}\n"
+"   setenv cmdappend ${CMDAPPEND}\n"
+"   save-all"
 
 #. Type: note
 #. Description
