[l10n] [SILENT_COMMIT] Synchronising with translation files from packages/po
r37805

--- a/debian/po/lt.po
+++ b/debian/po/lt.po
@@ -15,7 +15,7 @@ msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-08-18 18:32-0600\n"
-"PO-Revision-Date: 2005-09-21 01:13+0300\n"
+"PO-Revision-Date: 2006-06-02 09:51+0300\n"
 "Last-Translator: Kęstutis Biliūnas <kebil@kaunas.init.lt>\n"
 "Language-Team: Lithuanian <komp_lt@konferencijos.lt>\n"
 "MIME-Version: 1.0\n"
@@ -38,7 +38,7 @@ msgid ""
 "system will reboot.  At the Pegasos OpenFirmware prompt, set the following "
 "OpenFirmware variables to enable auto-booting:"
 msgstr ""
-"Kai kurie Pegasos OpenFirmware kintamieji turi būti nustatyti, tam kad Jūsų "
+"Kai kurie Pegasos OpenFirmware kintamieji turi būti nustatyti, tam kad "
 "sistema galėtų būti automatiškai įkelta. Įdiegimo pabaigoje, sistema bus "
 "perkraunama.  Esant Pegasos OpenFirmware kvietimui,  nustatykite sekančius "
 "OpenFirmware kintamuosius, kad būtų galimas automatinis įkėlimas:"
@@ -62,7 +62,7 @@ msgstr ""
 #: ../nobootloader.templates:8
 msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering :"
-msgstr "Arba, Jūs galėsite įkelti branduolį rankiniu būdu, įvesdami :"
+msgstr "Arba, galėsite įkelti branduolį rankiniu būdu, įvesdami :"
 
 #. Type: note
 #. Description
@@ -93,11 +93,11 @@ msgid ""
 "NeTTrom command system where you have to execute the following commands:"
 msgstr ""
 "Kai kurie Netwinder NeTTrom mikroprogramos (firmware) kintamieji turi būti "
-"nustatyti, tam kad Jūsų sistema galėtų įkelta automatiškai. Šios įdiegimo "
+"nustatyti, tam kad sistema galėtų būti įkelta automatiškai. Šios įdiegimo "
 "stadijos pabaigoje, sistema bus perkraunama, ir mikroprograma (fiemware) "
 "bandys atlikti automatinį įkėlimą. Jūs galite nutraukti šį procesą, paspaudę "
-"bet kurį klavišą. Tuomet Jūs atsidursite NeTTrom komandinėje sistemoje, kur "
-"Jūs turėsite paleisti vykdyti sekančias komandas:"
+"bet kurį klavišą. Tuomet atsidursite NeTTrom komandinėje sistemoje, kur "
+"turėsite paleisti vykdyti sekančias komandas:"
 
 #. Type: note
 #. Description
@@ -140,7 +140,7 @@ msgid ""
 "No boot loader has been installed, either because you chose not to or "
 "because your specific architecture doesn't support a boot loader yet."
 msgstr ""
-"Pradinis įkėliklis neįdiegtas, nes arba Jūs taip nusprendėte, arba Jūsų "
+"Pradinis įkėliklis neįdiegtas, nes arba taip nusprendėte, arba Jūsų "
 "kompiuterio architektūrai dar nėra pradinio įkėliklio."
 
 #. Type: note
