--- a/debian/po/eo.po
+++ b/debian/po/eo.po
@@ -5,7 +5,7 @@
 # 
 # translation of eo.po to Esperanto 
 # Esperanto messages for debian-installer.
-# Copyright (C) 2005 Software in the Public Interest, Inc.
+# Copyright (C) 2005,2006 Software in the Public Interest, Inc.
 # This file is distributed under the same license as debian-installer.
 #
 # Samuel Gimeno <sgimeno@gmail.com>, 2005.
@@ -15,7 +15,7 @@ msgstr ""
 "Project-Id-Version: eo\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-08-18 18:32-0600\n"
-"PO-Revision-Date: 2006-05-16 17:10+0200\n"
+"PO-Revision-Date: 2006-06-11 21:40+0200\n"
 "Last-Translator: Serge Leblanc <serge.leblanc@wanadoo.fr>\n"
 "Language-Team: Esperanto <debian-l10n-esperanto@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -149,5 +149,5 @@ msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as a kernel argument."
 msgstr ""
-"Vi bezonos mane proŝargi kun la ${KERNEL} kerno el ${BOOT} diskpartigo kaj "
-"doni ${ROOT} kiel argumento al ĉi kerno."
+"Vi bezonos mane ekŝargi per la '${KERNEL}'-kerno de '${BOOT}'-diskpartigo "
+"kaj doni '${ROOT}' kiel argumento al ĉi kerno."
