--- a/debian/po/nn.po
+++ b/debian/po/nn.po
@@ -4,7 +4,6 @@
 # DO NOT MODIFY IT DIRECTLY : SUCH CHANGES WILL BE LOST
 # 
 # translation of nn.po to Norwegian Nynorsk
-# translation of nn.po to Norwegian nynorsk
 # translation of debian-installer.po to Norwegian nynorsk
 # Norwegian Nynorsk messages for debian-installer.
 # Copyright (C) 2003 Software in the Public Interest, Inc.
@@ -16,7 +15,7 @@ msgstr ""
 "Project-Id-Version: nn\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-08-18 18:32-0600\n"
-"PO-Revision-Date: 2006-05-14 18:07+0200\n"
+"PO-Revision-Date: 2006-06-19 11:01+0200\n"
 "Last-Translator: Håvard Korsvoll <korsvoll@skulelinux.no>\n"
 "Language-Team: Norwegian Nynorsk <nn@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -31,7 +30,7 @@ msgstr ""
 #. Main menu item
 #: ../nobootloader.templates:4
 msgid "Continue without boot loader"
-msgstr "Hald fram utan oppstartslastar"
+msgstr "Gå vidare utan oppstartslastar"
 
 #. Type: note
 #. Description
