--- a/debian/po/zh_TW.po
+++ b/debian/po/zh_TW.po
@@ -12,7 +12,7 @@ msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-08-18 18:32-0600\n"
-"PO-Revision-Date: 2006-01-23 17:48-0600\n"
+"PO-Revision-Date: 2006-07-28 00:11+0800\n"
 "Last-Translator: Tetralet <tetralet@pchome.com.tw>\n"
 "Language-Team: Debian-user in Chinese [Big5] <debian-chinese-big5@lists."
 "debian.org>\n"
@@ -77,7 +77,7 @@ msgstr "來手動啟動您的系統。"
 #. Description
 #: ../nobootloader.templates:30
 msgid "Setting firmware variables for automatic boot"
-msgstr "替自動開機設定韌體參數"
+msgstr "正在替自動開機設定韌體參數"
 
 #. Type: note
 #. Description
@@ -119,7 +119,7 @@ msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to the next installation stage."
 msgstr ""
-"這些動作只需進行一次。之後，輸入 \"boot\" 指令或重新啟動系統來繼續進行 下一個"
+"這些動作只需進行一次。之後，輸入 \"boot\" 指令或重新啟動系統來繼續進行下一個"
 "安裝階段。"
 
 #. Type: note
@@ -135,7 +135,7 @@ msgid ""
 "No boot loader has been installed, either because you chose not to or "
 "because your specific architecture doesn't support a boot loader yet."
 msgstr ""
-"沒有安裝任何開機程式，其原因可能是您選擇了不安裝，或者是您的特殊系統平台尚未"
+"沒有安裝任何開機程式，其原因可能是您選擇了不安裝，或者是您的特殊硬體架構尚未"
 "支援任何開機程式。"
 
 #. Type: note
