* If /sys/block and udevinfo are available, use them instead of devfs   device name parsing to work out IDE/SCSI Open Firmware paths for   Pegasos.
r40129

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+nobootloader (1.10) UNRELEASED; urgency=low
+
+  * If /sys/block and udevinfo are available, use them instead of devfs
+    device name parsing to work out IDE/SCSI Open Firmware paths for
+    Pegasos.
+
+ -- Colin Watson <cjwatson@debian.org>  Tue, 22 Aug 2006 09:38:15 +0100
+
 nobootloader (1.09) unstable; urgency=low
 
   [ Updated translations ]
