--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,16 @@
-nobootloader (1.10) UNRELEASED; urgency=low
+nobootloader (1.10) unstable; urgency=low
 
   * If /sys/block and udevinfo are available, use them instead of devfs
     device name parsing to work out IDE/SCSI Open Firmware paths for
     Pegasos.
 
- -- Colin Watson <cjwatson@debian.org>  Tue, 22 Aug 2006 09:38:15 +0100
+  [ Updated translations ]
+  * Spanish (es.po) by Javier Fernández-Sanguino Peña
+  * Panjabi (pa.po) by A S Alam
+  * Northern Sami (se.po) by Børre Gaup
+  * Traditional Chinese (zh_TW.po) by Tetralet
+
+ -- Colin Watson <cjwatson@debian.org>  Tue, 29 Aug 2006 11:20:35 +0100
 
 nobootloader (1.09) unstable; urgency=low
 
