* Mark Open Firmware commands as untranslatable.
r40320

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nobootloader (1.11) UNRELEASED; urgency=low
+
+  * Mark Open Firmware commands as untranslatable.
+
+ -- Colin Watson <cjwatson@debian.org>  Wed, 30 Aug 2006 10:12:20 +0100
+
 nobootloader (1.10) unstable; urgency=low
 
   * If /sys/block and udevinfo are available, use them instead of devfs
