--- a/debian/po/sv.po
+++ b/debian/po/sv.po
@@ -14,14 +14,14 @@
 #
 # Swedish translation by:
 # Per Olofsson <pelle@debian.org>
-# Daniel Nylander <po@danielnylander.se>, 2005
+# Daniel Nylander <po@danielnylander.se>, 2006.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2006-08-30 10:58+0000\n"
-"PO-Revision-Date: 2006-02-25 00:50+0100\n"
+"PO-Revision-Date: 2006-08-28 06:24+0100\n"
 "Last-Translator: Daniel Nylander <po@danielnylander.se>\n"
 "Language-Team: Swedish <debian-boot@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -123,32 +123,3 @@ msgid ""
 msgstr ""
 "Du behöver starta upp manuellt med kärnan ${KERNEL} på partitionen ${BOOT} "
 "med argumentet ${ROOT} till kärnan."
-
-#~ msgid ""
-#~ " setenv boot-device ${OF_BOOT_DEVICE}\n"
-#~ " setenv boot-file ${OF_BOOT_FILE}\n"
-#~ " setenv auto-boot-timeout 5000\n"
-#~ " setenv auto-boot? true"
-#~ msgstr ""
-#~ " setenv boot-device ${OF_BOOT_DEVICE}\n"
-#~ " setenv boot-file ${OF_BOOT_FILE}\n"
-#~ " setenv auto-boot-timeout 5000\n"
-#~ " setenv auto-boot? true"
-
-#~ msgid " ${KERNEL_BOOT}"
-#~ msgstr " ${KERNEL_BOOT}"
-
-#~ msgid ""
-#~ "   setenv kernconfig fs\n"
-#~ "   setenv kerndev ${KERNDEV}\n"
-#~ "   setenv kernfile ${KERNFILE}\n"
-#~ "   setenv rootdev ${ROOTDEV}\n"
-#~ "   setenv cmdappend ${CMDAPPEND}\n"
-#~ "   save-all"
-#~ msgstr ""
-#~ "   setenv kernconfig fs\n"
-#~ "   setenv kerndev ${KERNDEV}\n"
-#~ "   setenv kernfile ${KERNFILE}\n"
-#~ "   setenv rootdev ${ROOTDEV}\n"
-#~ "   setenv cmdappend ${CMDAPPEND}\n"
-#~ "   save-all"
