--- a/debian/po/zh_TW.po
+++ b/debian/po/zh_TW.po
@@ -12,8 +12,8 @@ msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2006-08-30 10:58+0000\n"
-"PO-Revision-Date: 2006-07-28 00:11+0800\n"
-"Last-Translator: Tetralet <tetralet@pchome.com.tw>\n"
+"PO-Revision-Date: 2006-07-30 01:30+0800\n"
+"Last-Translator: Tetralet <tetralet@gmail.com>\n"
 "Language-Team: Debian-user in Chinese [Big5] <debian-chinese-big5@lists."
 "debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -109,32 +109,3 @@ msgid ""
 msgstr ""
 "您將需要手動由 ${BOOT} 分割區的 ${KERNEL} Kernel 開機，並加上 ${ROOT} 以做為 "
 "Kernel 的參數。"
-
-#~ msgid ""
-#~ " setenv boot-device ${OF_BOOT_DEVICE}\n"
-#~ " setenv boot-file ${OF_BOOT_FILE}\n"
-#~ " setenv auto-boot-timeout 5000\n"
-#~ " setenv auto-boot? true"
-#~ msgstr ""
-#~ " setenv boot-device ${OF_BOOT_DEVICE}\n"
-#~ " setenv boot-file ${OF_BOOT_FILE}\n"
-#~ " setenv auto-boot-timeout 5000\n"
-#~ " setenv auto-boot? true"
-
-#~ msgid " ${KERNEL_BOOT}"
-#~ msgstr " ${KERNEL_BOOT}"
-
-#~ msgid ""
-#~ "   setenv kernconfig fs\n"
-#~ "   setenv kerndev ${KERNDEV}\n"
-#~ "   setenv kernfile ${KERNFILE}\n"
-#~ "   setenv rootdev ${ROOTDEV}\n"
-#~ "   setenv cmdappend ${CMDAPPEND}\n"
-#~ "   save-all"
-#~ msgstr ""
-#~ "   setenv kernconfig fs\n"
-#~ "   setenv kerndev ${KERNDEV}\n"
-#~ "   setenv kernfile ${KERNFILE}\n"
-#~ "   setenv rootdev ${ROOTDEV}\n"
-#~ "   setenv cmdappend ${CMDAPPEND}\n"
-#~ "   save-all"
