--- a/debian/po/bn.po
+++ b/debian/po/bn.po
@@ -3,13 +3,15 @@
 #
 # DO NOT MODIFY IT DIRECTLY : SUCH CHANGES WILL BE LOST
 # 
-# Debian Installer master translation file template
+# Bangla translation of Debian-Installer.
+# Copyright (C) 2005, 2006, Debian Foundation.
+# This file is distributed under the same license as the Debian-Installer package.
 #
 # Anubadok, the en2bn auto-translator by Golam Mortuza Hossain <golam@imsc.res.in>, 2005.
 # Baishampayan Ghose <b.ghose@gnu.org.in>, 2005-2006.
 # Jamil Ahmed <jamil@bengalinux.org>, 2005.
 # Khandakar Mujahidul Islam <suzan@bengalinux.org>, 2005.
-# Progga <progga@BengaLinux.Org>, 2005.
+# Progga <progga@BengaLinux.Org>, 2005, 2006.
 # Quazi Ashfaq-ur Rahman <quazi.ashfaq@gmail.com>, 2005.
 # 
 msgid ""
@@ -17,8 +19,8 @@ msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2006-08-30 10:58+0000\n"
-"PO-Revision-Date: 2005-10-18 03:16+0530\n"
-"Last-Translator: Baishampayan Ghose <b.ghose@gnu.org.in>\n"
+"PO-Revision-Date: 2006-05-04 20:00+0600\n"
+"Last-Translator: Progga <progga@BengaLinux.Org>\n"
 "Language-Team: Bangla <core@BengaLinux.Org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -116,32 +118,3 @@ msgid ""
 msgstr ""
 "আপনাকে ${BOOT} পার্টিশনের ${KERNEL} কার্নেল ব্যবহার করে এবং ${ROOT}-কে কার্নেলের "
 "আর্গুমেন্ট হিসেবে ব্যবহার করে নিজ হাতেই বুট করতে হবে।"
-
-#~ msgid ""
-#~ " setenv boot-device ${OF_BOOT_DEVICE}\n"
-#~ " setenv boot-file ${OF_BOOT_FILE}\n"
-#~ " setenv auto-boot-timeout 5000\n"
-#~ " setenv auto-boot? true"
-#~ msgstr ""
-#~ "setenv boot-device ${OF_BOOT_DEVICE}\n"
-#~ "setenv ${OF_BOOT_FILE}\n"
-#~ "setenv auto-boot-timeout 5000\n"
-#~ "setenv auto-boot boot-file? true"
-
-#~ msgid " ${KERNEL_BOOT}"
-#~ msgstr "${KERNEL_BOOT}"
-
-#~ msgid ""
-#~ "   setenv kernconfig fs\n"
-#~ "   setenv kerndev ${KERNDEV}\n"
-#~ "   setenv kernfile ${KERNFILE}\n"
-#~ "   setenv rootdev ${ROOTDEV}\n"
-#~ "   setenv cmdappend ${CMDAPPEND}\n"
-#~ "   save-all"
-#~ msgstr ""
-#~ "   setenv kernconfig fs\n"
-#~ "   setenv kerndev ${KERNDEV}\n"
-#~ "   setenv kernfile ${KERNFILE}\n"
-#~ "   setenv rootdev ${ROOTDEV}\n"
-#~ "   setenv cmdappend ${CMDAPPEND}\n"
-#~ "   save-all"
