--- a/debian/po/is.po
+++ b/debian/po/is.po
@@ -8,17 +8,19 @@
 # Andri Kristjánsson <andrik04@ru.is>, 2005.
 # Kristinn B. Gylfason <nospam@askur.org>, 2005.
 # David Danielsson, 2005.
+# David Steinn Geirsson <davidgeirs@gmail.com>, 2006.
 msgid ""
 msgstr ""
-"Project-Id-Version: debian-installer\n"
+"Project-Id-Version: is\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2006-08-30 10:58+0000\n"
-"PO-Revision-Date: 2005-11-07 23:26+0000\n"
+"PO-Revision-Date: 2006-08-13 19:02+0000\n"
 "Last-Translator: David Steinn Geirsson <davidgeirs@gmail.com>\n"
 "Language-Team: Icelandic <debian-user-icelandic@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: KBabel 1.11.2\n"
 
 #. Type: text
 #. Description
@@ -112,32 +114,3 @@ msgid ""
 msgstr ""
 "Þú munt þurfa að ræsa handvirkt með kjarnanum ${KERNEL} á disksneiðinni "
 "${BOOT} og setja ${ROOT} sem viðfang."
-
-#~ msgid ""
-#~ " setenv boot-device ${OF_BOOT_DEVICE}\n"
-#~ " setenv boot-file ${OF_BOOT_FILE}\n"
-#~ " setenv auto-boot-timeout 5000\n"
-#~ " setenv auto-boot? true"
-#~ msgstr ""
-#~ " setenv boot-device ${OF_BOOT_DEVICE}\n"
-#~ " setenv boot-file ${OF_BOOT_FILE}\n"
-#~ " setenv auto-boot-timeout 5000\n"
-#~ " setenv auto-boot? true"
-
-#~ msgid " ${KERNEL_BOOT}"
-#~ msgstr " ${KERNEL_BOOT}"
-
-#~ msgid ""
-#~ "   setenv kernconfig fs\n"
-#~ "   setenv kerndev ${KERNDEV}\n"
-#~ "   setenv kernfile ${KERNFILE}\n"
-#~ "   setenv rootdev ${ROOTDEV}\n"
-#~ "   setenv cmdappend ${CMDAPPEND}\n"
-#~ "   save-all"
-#~ msgstr ""
-#~ "   setenv kernconfig fs\n"
-#~ "   setenv kerndev ${KERNDEV}\n"
-#~ "   setenv kernfile ${KERNFILE}\n"
-#~ "   setenv rootdev ${ROOTDEV}\n"
-#~ "   setenv cmdappend ${CMDAPPEND}\n"
-#~ "   save-all"
