--- a/debian/po/ka.po
+++ b/debian/po/ka.po
@@ -16,7 +16,7 @@ msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2006-08-30 10:58+0000\n"
-"PO-Revision-Date: 2006-05-26 18:01+0400\n"
+"PO-Revision-Date: 2006-06-01 02:28+0400\n"
 "Last-Translator: Aiet Kolkhi <aietkolkhi@gmail.com>\n"
 "Language-Team: Debian Georgian <ka@aiet.qartuli.net>\n"
 "MIME-Version: 1.0\n"
@@ -26,6 +26,7 @@ msgstr ""
 "Plural-Forms: nplurals=1; plural=0;\n"
 "X-Poedit-Country: GEORGIA\n"
 "X-Poedit-SourceCharset: utf-8\n"
+"X-Poedit-Language: Georgian\n"
 
 #. Type: text
 #. Description
@@ -105,7 +106,3 @@ msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as a kernel argument."
 msgstr ""
-
-#, fuzzy
-#~ msgid " ${KERNEL_BOOT}"
-#~ msgstr "%1 გამორიცხვა თამაშიდან"
