--- a/debian/po/nl.po
+++ b/debian/po/nl.po
@@ -14,8 +14,8 @@ msgstr ""
 "Project-Id-Version: nl\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2006-08-30 10:58+0000\n"
-"PO-Revision-Date: 2006-05-19 12:04+0100\n"
-"Last-Translator: Bart Cornelis <cobaco@linux.be>\n"
+"PO-Revision-Date: 2006-08-23 10:54+0100\n"
+"Last-Translator: Bart Cornelis <cobaco@skolelinux.no>\n"
 "Language-Team: Dutch <debian-l10n-dutch@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -119,32 +119,3 @@ msgid ""
 msgstr ""
 "U zult handmatig moeten opstarten met de kernel '${KERNEL}' op partitie "
 "'${BOOT}' en met '${ROOT}' als kernelparameter."
-
-#~ msgid ""
-#~ " setenv boot-device ${OF_BOOT_DEVICE}\n"
-#~ " setenv boot-file ${OF_BOOT_FILE}\n"
-#~ " setenv auto-boot-timeout 5000\n"
-#~ " setenv auto-boot? true"
-#~ msgstr ""
-#~ " setenv boot-device ${OF_BOOT_DEVICE}\n"
-#~ " setenv boot-file ${OF_BOOT_FILE}\n"
-#~ " setenv auto-boot-timeout 5000\n"
-#~ " setenv auto-boot? true"
-
-#~ msgid " ${KERNEL_BOOT}"
-#~ msgstr " ${KERNEL_BOOT}"
-
-#~ msgid ""
-#~ "   setenv kernconfig fs\n"
-#~ "   setenv kerndev ${KERNDEV}\n"
-#~ "   setenv kernfile ${KERNFILE}\n"
-#~ "   setenv rootdev ${ROOTDEV}\n"
-#~ "   setenv cmdappend ${CMDAPPEND}\n"
-#~ "   save-all"
-#~ msgstr ""
-#~ "   setenv kernconfig fs\n"
-#~ "   setenv kerndev ${KERNDEV}\n"
-#~ "   setenv kernfile ${KERNFILE}\n"
-#~ "   setenv rootdev ${ROOTDEV}\n"
-#~ "   setenv cmdappend ${CMDAPPEND}\n"
-#~ "   save-all"
